--- a/title.tex
+++ b/title.tex
@@ -45,7 +45,7 @@
 \noindent\hspace*{\centeroffset}\makebox[0pt][l]{
 \begin{minipage}{\textwidth}
     \centering
-    \ifoptionfinal{\textcolor{White}{\today}}{\today}
+    \ifoptionfinal{\phantom{\today}}{DRAFT: \today}
 \end{minipage}}
 
 \vspace{6ex}
