ptx: don't escape to regular latex in comments
* Generally we'll have the -src-in-ptx option enabled, which will put C code into comments. We don't want to manually escape all special operators such as & and _.

--- a/preamble.tex
+++ b/preamble.tex
@@ -234,7 +234,8 @@
 \lstdefinestyle{ptx}{%
     language=CUDA,
     mathescape=false,
-    escapeinside={(@*}{*@)}
+    escapeinside={(@*}{*@)},
+    texcl=false
 }
 
 \lstdefinestyle{inline}{%
